@@ -25,6 +25,11 @@ module Lobbyist
       def self.destroy(id, params)
         create_from_response(delete("/v2/enterprises/#{id}.json", params))
       end
+      
+      def self.metrics(id)
+        create_from_response(get("/v2/enterprises/#{id}/metrics.json"))
+      end
+
     end
 
   end
