@@ -1,3 +1,4 @@
+* Added metrics call to enterprises V2 API.
 * Added customer proxy model for the V2 API.
 
 === 0.5.3 2014-03-19
